[package]
name = "canister_controlled_neuron"
description = "A canister to control neurons"
version = "0.1.0"
authors = ["rem.codes"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path="src/lib.rs"


[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.0"
ic-stable-structures = "0.6.8"
sha2 = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
ic-ledger-types = "0.15.0"
toolkit-utils = {path = "../toolkit_utils"}